k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atomos-showcase-svc
spec:
  selector:
    app: atomos-showcase
  ports:
    - port: 80
      targetPort: 3000
