k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atomos-showcase-ingress
spec:
  rules:
    - host: structura.gmktech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atomos-showcase-svc
                port:
                  number: 80
